--- a/support/support.html
+++ b/support/support.html
@@ -62,7 +62,7 @@
                             <ul class="snb">
                                 <li><a href="#">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
-                                <li><a href="#">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
                                 <li><a href="#">고객지원 홈페이지</a></li>
                                 <li><a href="#">네트워크 장애 발생 상황</a></li>
                             </ul>
@@ -109,7 +109,7 @@
                             <ul class="snb">
                                 <li><a href="#">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
-                                <li><a href="#">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
                                 <li><a href="#">고객지원 홈페이지</a></li>
                                 <li><a href="#">네트워크 장애 발생 상황</a></li>
                             </ul>
