--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         </li>
                         <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
+                                <li><a href="#">소프트웨어 한눈에 보기</a></li>
                                 <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
                                 <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
                                 <li><a href="#">발매 예정 소프트웨어</a></li>
@@ -61,13 +62,14 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="./support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
+                                <li><a href="./support/support.html">고객지원 한눈에 보기</a></li>
                                 <li><a href="#">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
-                                <li><a href="#">닌텐도 3DS 고객지원</a></li>
-                                <li><a href="#">고객지원 홈페이지</a></li>
-                                <li><a href="#">네트워크 장애 발생 상황</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
                         <li><a href="./news/news.html">News<i class="fa-regular fa-circle-down"></i></a>
@@ -108,13 +110,13 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">고객지원</a>
+                        <li><a href="./support/support.html">고객지원</a>
                             <ul class="snb">
-                                <li><a href="#">Nintendo Switch 고객지원 </a></li>
+                                <li><a href="./support/support.html">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
-                                <li><a href="#">닌텐도 3DS 고객지원</a></li>
-                                <li><a href="#">고객지원 홈페이지</a></li>
-                                <li><a href="#">네트워크 장애 발생 상황</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
                         <li><a href="./news/news.html?tab=0">News</a>
