--- a/support/support.html
+++ b/support/support.html
@@ -44,6 +44,7 @@
                         </li>
                         <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
+                                <li><a href="#">소프트웨어 한눈에 보기</a></li>
                                 <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
                                 <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
                                 <li><a href="#">발매 예정 소프트웨어</a></li>
@@ -58,21 +59,22 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="../support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
+                                <li><a href="../support/support.html">고객지원 한눈에 보기</a></li>
                                 <li><a href="#">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
-                                <li><a href="#">고객지원 홈페이지</a></li>
-                                <li><a href="#">네트워크 장애 발생 상황</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
-                        <li><a href="./news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="../news/news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="./news.html?tab=1">News</a></li>
-                                <li><a href="./news.html?tab=2">보도자료</a></li>
-                                <li><a href="./news.html?tab=3">알림</a></li>
-                                <li><a href="./news.html?tab=4">이벤트</a></li>
+                                <li><a href="../news/news.html?tab=1">News</a></li>
+                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -105,21 +107,21 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">고객지원</a>
+                        <li><a href="../support/support.html">고객지원</a>
                             <ul class="snb">
-                                <li><a href="#">Nintendo Switch 고객지원 </a></li>
+                                <li><a href="../support/support.html">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
-                                <li><a href="#">고객지원 홈페이지</a></li>
-                                <li><a href="#">네트워크 장애 발생 상황</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
-                        <li><a href="./news.html?tab=0">News</a>
+                        <li><a href="../news/news.html?tab=0">News</a>
                             <ul class="snb">
-                                <li><a href="./news.html?tab=1">News</a></li>
-                                <li><a href="./news.html?tab=2">보도자료</a></li>
-                                <li><a href="./news.html?tab=3">알림</a></li>
-                                <li><a href="./news.html?tab=4">이벤트</a></li>
+                                <li><a href="../news/news.html?tab=1">News</a></li>
+                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -130,6 +132,19 @@
         </div>
     </header>
 
+    <section id="support">
+        <h1>고객지원</h1>
+        <div class="switch">
+            <h4>NINTENCO SWITCH</h4>
+            <p>Nintendo Switch 본체에 관한</p>
+            <p>고객지원 정보 안내입니다.</p>
+        </div>
+        <div class="3ds">
+            <h4>닌텐도 3DS 시리즈</h4>
+            <p>Nintendo 3DS 본체에 관한</p>
+            <p>고객지원 정보 안내입니다.</p>
+        </div>
+    </section>
 
     <footer>
         <div class="community">
