--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
                                 <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
-                        <li><a href="./news/news.html">News<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="./news/news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="./news/news.html">News</a></li>
-                                <li><a href="./news/news.html">보도자료</a></li>
-                                <li><a href="./news/news.html">알림</a></li>
-                                <li><a href="./news/news.html">이벤트</a></li>
+                                <li><a href="./news/news.html?tab=0">뉴스 전체보기</a></li>
+                                <li><a href="./news/news.html?tab=1">News</a></li>
+                                <li><a href="./news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="./news/news.html?tab=3">알림</a></li>
+                                <li><a href="./news/news.html?tab=4">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
