--- a/support/switch/switch.html
+++ b/support/switch/switch.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nintendo</title>
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="./css/support_style.css">
-    <link rel="stylesheet" href="./css/support_style_pc.css">
-    <link rel="icon" href="../favicon//favi.png">
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/header.css">
+    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="./css/switch_style.css">
+    <link rel="stylesheet" href="./css/switch_style_pc.css">
+    <link rel="icon" href="../../favicon//favi.png">
 
     <script src="https://kit.fontawesome.com/7aa93c4da2.js" crossorigin="anonymous"></script>
-    <script src="../js/header.js" defer></script>
-    <script src="../js/footer.js" defer></script>
+    <script src="../../js/header.js" defer></script>
+    <script src="../../js/footer.js" defer></script>
 </head>
-
 <body>
     <header>
         <div class="header_wrap">
-            <div class="logo"><a href="../index.html"><img src="../img/logo_nintendo_red.gif" alt="로고"></a></div>
+            <div class="logo"><a href="../../index.html"><img src="../../img/logo_nintendo_red.gif" alt="로고"></a></div>
             <nav>
                 <div class="menu">
                     <div class="menu_icon">
@@ -61,9 +59,9 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="../support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="../../support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="../support/switch/switch.html">고객지원 한눈에 보기</a></li>
+                                <li><a href="../../support/support.html">고객지원 한눈에 보기</a></li>
                                 <li><a href="#">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
@@ -71,13 +69,13 @@
                                 <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
-                        <li><a href="../news/news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="../../news/news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="../news/news.html?tab=0">뉴스 전체보기</a></li>
-                                <li><a href="../news/news.html?tab=1">News</a></li>
-                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
-                                <li><a href="../news/news.html?tab=3">알림</a></li>
-                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
+                                <li><a href="../../news/news.html?tab=0">뉴스 전체보기</a></li>
+                                <li><a href="../../news/news.html?tab=1">News</a></li>
+                                <li><a href="../../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../../news/news.html?tab=4">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -110,21 +108,21 @@
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
                         </li>
-                        <li><a href="../support/support.html">고객지원</a>
+                        <li><a href="../../support/support.html">고객지원</a>
                             <ul class="snb">
-                                <li><a href="../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
+                                <li><a href="../../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
                                 <li><a href="#">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
                                 <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
                                 <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
                             </ul>
                         </li>
-                        <li><a href="../news/news.html?tab=0">News</a>
+                        <li><a href="../../news/news.html?tab=0">News</a>
                             <ul class="snb">
-                                <li><a href="../news/news.html?tab=1">News</a></li>
-                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
-                                <li><a href="../news/news.html?tab=3">알림</a></li>
-                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
+                                <li><a href="../../news/news.html?tab=1">News</a></li>
+                                <li><a href="../../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../../news/news.html?tab=4">이벤트</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -135,42 +133,62 @@
         </div>
     </header>
 
-    <section id="support">
-        <div id="nintendo_wrap">
-            <div class="switch">
-                <div class="photo"><img src="./img/switch.png" alt="닌텐도 스위치 사진"></div>
-                <h4 class="head">NINTENDO SWITCH</h4>
-                <div class="info_text">
-                    <p>Nintendo Switch 본체에 관한</p>
-                    <p>고객지원 정보 안내입니다.</p>
-                </div>
-                <div class="more"><a href="./switch/switch.html">자세히보기</a></div>
-            </div>
-            <div class="ds">
-                <div class="photo"><img src="./img/3ds.png" alt="닌텐도 3DS 사진"></div>
-                <h4 class="head">NINTENDO 3DS 시리즈</h4>
-                <div class="info_text">
-                    <p>Nintendo 3DS 본체에 관한</p>
-                    <p>고객지원 정보 안내입니다.</p>
-                </div>
-                <div class="more"><a href="#">자세히보기</a></div> 
-            </div>
-        </div>
-        <div id="etc_tab">
-            <div class="etc">
-                <h4><span></span>기타 고객지원</h4>
-                <p><a href="">-게임&워치 젤다의 전설</a></p>
-                <p><a href="">-게임&워치 슈퍼 마리오 브라더스</a></p>
-                <p><a href="">-기타</a></p>
-            </div>
-            <div class="center">
-                <h4><span></span>고객지원 센터</h4>
-                <p id="tel">TEL&#41; 1670 - 9900</p>
-                <p class="hours">(평일 오전 9시 30분~오후 5시 30분)</p>
-                <p class="hours">※ 토/일/공휴일/회사 정기휴일 및 특별휴일 제외</p>
-            </div>
-        </div>
+    <section id="support_top">
+        <h1>Nintendo Switch 고객지원</h1>
+        <p id="photo"><img src="./img/switch.jpg" alt="닌텐도 스위치와 닌텐도 스위치 라이트"></p>
     </section>
+    
+    <section id="instruction">
+        <h2>사용방법</h2>
+        <div class="first">
+            <a href="#">
+            <p><i class="fa-solid fa-circle-chevron-right"></i> 처음 사용하는 경우에는</p>
+            <p>(박스를 열고 소프트웨어를 플레이 할때까지)</p>
+        </a>
+        </div>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 보호자 여러분께</a></p>
+        <ul id="ins_list">
+            <li><a href="#"><img src="" alt="">충전 방법</a></li>
+            <li><a href="#"><img src="" alt="">플레이 모드와 접속 방법</a></li>
+            <li><a href="#"><img src="" alt="">컨트롤러 준비</a></li>
+            <li><a href="#"><img src="" alt="">인터넷 접속</a></li>
+            <li><a href="#"><img src="" alt="">유저와 닌텐도 어카운트 연동</a></li>
+            <li><a href="#"><img src="" alt="">친구</a></li>
+            <li><a href="#"><img src="" alt="">지킴이 설정<p></p>(청소년 보호기능)</a></li>
+            <li><a href="#"><img src="" alt="">데이터 관리</a></li>
+            <li><a href="#"><img src="" alt="">닌텐도 e숍</a></li>
+            <li><a href="#"><img src="" alt="">주변기기의 사용 방법</a></li>
+            <li><a href="#"><img src="" alt="">해외에서의 사용</a></li>
+            <li><a href="#"><img src="" alt="">구입한 다운로드 소프트웨어를<p></p>다른 본체에서 플레이하는 법</a></li>
+            <li><a href="#"><img src="" alt="">유저의 이사와 저장 데이터의 이사</a></li>
+            <li><a href="#"><img src="" alt="">Nintendo Switch에서<p></p>플레이할 수 있는 소프트웨어</a></li>
+        </ul>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 각부의 명칭·사양</a></p>
+    </section>
+
+    <section id="info_menu">
+        <ul id="info_list">
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 본체 업데이트 정보</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Q&A</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 한국어 대응 스케줄</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 고객지원 홈페이지</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 정식판매처</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 소프트웨어가 설치된 본체</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 모여봐요 동물의 숲 저장 데이터 이사</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 『마리오 카트 라이브 : 홈 서킷』 고객지원</a></li>
+        </ul>
+    </section>
+
+    <section id="etc">
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 이용 약관</a></p>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 안전을 위한 주의사항(PDF)</a></p>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 본체 및 주변기기의 보증규정과 수리서비스 규정(PDF)</a></p>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 『VR 모드(3D 영상)』에 대해 전하는 말씀</a></p>
+    </section>
+
+    <div id="go_top">
+        <a href="#"><span>TOP</span>&nbsp;&nbsp;<i class="fa-solid fa-angle-up"></i></a>
+    </div>
 
     <footer>
         <div class="community">
@@ -210,9 +228,9 @@
                         <li><a href="#">- 스마트폰용 앱</a></li>
                     </ul>
                 </li>
-                <li><a href="./support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                <li><a href="#">고객지원<i class="fa-regular fa-circle-down"></i></a>
                     <ul class="footer_snb">
-                        <li><a href="./switch/switch.html">- Nintendo Switch</a></li>
+                        <li><a href="#">- Nintendo Switch</a></li>
                         <li><a href="#">- 닌텐도 3DS</a></li>
                         <li><a href="#">- 고객지원 홈페이지</a></li>
                     </ul>
@@ -243,5 +261,4 @@
         </div>
     </footer>
 </body>
-
 </html>
