--- a/support/switch/switch.html
+++ b/support/switch/switch.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/switch_style.css">
     <link rel="stylesheet" href="./css/switch_style_pc.css">
     <link rel="icon" href="../../favicon//favi.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <script src="https://kit.fontawesome.com/7aa93c4da2.js" crossorigin="anonymous"></script>
     <script src="../../js/header.js" defer></script>
@@ -135,11 +136,11 @@
 
     <section id="support_top">
         <h1>Nintendo Switch 고객지원</h1>
-        <p id="photo"><img src="./img/switch.jpg" alt="닌텐도 스위치와 닌텐도 스위치 라이트"></p>
+        <p id="photo"><img src="./img/switch.png" alt="닌텐도 스위치와 닌텐도 스위치 라이트"></p>
     </section>
     
     <section id="instruction">
-        <h2>사용방법</h2>
+        <h2><span></span>사용방법</h2>
         <div class="first">
             <a href="#">
             <p><i class="fa-solid fa-circle-chevron-right"></i> 처음 사용하는 경우에는</p>
@@ -148,20 +149,20 @@
         </div>
         <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 보호자 여러분께</a></p>
         <ul id="ins_list">
-            <li><a href="#"><img src="" alt="">충전 방법</a></li>
-            <li><a href="#"><img src="" alt="">플레이 모드와 접속 방법</a></li>
-            <li><a href="#"><img src="" alt="">컨트롤러 준비</a></li>
-            <li><a href="#"><img src="" alt="">인터넷 접속</a></li>
-            <li><a href="#"><img src="" alt="">유저와 닌텐도 어카운트 연동</a></li>
-            <li><a href="#"><img src="" alt="">친구</a></li>
-            <li><a href="#"><img src="" alt="">지킴이 설정<p></p>(청소년 보호기능)</a></li>
-            <li><a href="#"><img src="" alt="">데이터 관리</a></li>
-            <li><a href="#"><img src="" alt="">닌텐도 e숍</a></li>
-            <li><a href="#"><img src="" alt="">주변기기의 사용 방법</a></li>
-            <li><a href="#"><img src="" alt="">해외에서의 사용</a></li>
-            <li><a href="#"><img src="" alt="">구입한 다운로드 소프트웨어를<p></p>다른 본체에서 플레이하는 법</a></li>
-            <li><a href="#"><img src="" alt="">유저의 이사와 저장 데이터의 이사</a></li>
-            <li><a href="#"><img src="" alt="">Nintendo Switch에서<p></p>플레이할 수 있는 소프트웨어</a></li>
+            <li><a href="#"><i class="bi bi-battery-half"></i>충전 방법</a></li>
+            <li><a href="#"><i class="bi bi-nintendo-switch"></i>플레이 모드와 접속 방법</a></li>
+            <li><a href="#"><i class="fa-solid fa-gamepad"></i>컨트롤러 준비</a></li>
+            <li><a href="#"><i class="bi bi-globe2"></i>인터넷 접속</a></li>
+            <li><a href="#"><i class="fa-solid fa-user"></i>유저와 닌텐도 어카운트 연동</a></li>
+            <li><a href="#"><i class="fa-solid fa-user-group"></i>친구</a></li>
+            <li><a href="#"><i class="fa-solid fa-hands-holding-child"></i>지킴이 설정<p></p>(청소년 보호기능)</a></li>
+            <li><a href="#"><i class="fa-solid fa-gear"></i>데이터 관리</a></li>
+            <li><a href="#"><i class="bi bi-bag"></i>닌텐도 e숍</a></li>
+            <li><a href="#"><i class="bi bi-controller"></i>주변기기의 사용 방법</a></li>
+            <li><a href="#"><i class="fa-solid fa-plane"></i>해외에서의 사용</a></li>
+            <li><a href="#"><i class="fa-solid fa-download"></i>구입한 다운로드 소프트웨어를<p></p>다른 본체에서 플레이하는 법</a></li>
+            <li><a href="#"><i class="bi bi-cloud-download"></i>유저의 이사와 저장 데이터의 이사</a></li>
+            <li><a href="#"><i class="fa-solid fa-play"></i>Nintendo Switch에서<p></p>플레이할 수 있는 소프트웨어</a></li>
         </ul>
         <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 각부의 명칭·사양</a></p>
     </section>
@@ -175,14 +176,14 @@
             <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 정식판매처</a></li>
             <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 소프트웨어가 설치된 본체</a></li>
             <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 모여봐요 동물의 숲 저장 데이터 이사</a></li>
-            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 『마리오 카트 라이브 : 홈 서킷』 고객지원</a></li>
+            <li><a href="#"><i class="fa-solid fa-circle-chevron-right"></i>『마리오 카트 라이브 : 홈 서킷』고객지원</a></li>
         </ul>
     </section>
 
     <section id="etc">
         <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 이용 약관</a></p>
-        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 안전을 위한 주의사항(PDF)</a></p>
-        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 본체 및 주변기기의 보증규정과 수리서비스 규정(PDF)</a></p>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 안전을 위한 주의사항</a></p>
+        <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 본체 및 주변기기의 보증규정과 수리서비스 규정</a></p>
         <p class="tip"><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 『VR 모드(3D 영상)』에 대해 전하는 말씀</a></p>
     </section>
 
