--- a/character/mario/mario.html
+++ b/character/mario/mario.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="./css/mario_style.css">
+    <link rel="stylesheet" href="./css/mario_style_pc.css">
     <link rel="icon" href="../../favicon//favi.png">
 
     <script src="https://kit.fontawesome.com/7aa93c4da2.js" crossorigin="anonymous"></script>
@@ -96,23 +97,29 @@
         <p class="head"><img src="./img/mario_heading.png" alt="도트 마리오가 점프하고 있다">GAMES</p>
         
         <ul id="games_list">
-            <li><a href="#"><img src="./img/game1.jpg" alt="마리오 카트 8 디럭스 이미지"></a>
+            <li><a href="#"><img src="./img/game1.jpg" alt="마리오 카트 8 디럭스 이미지">
+                <div class="hover_bg"></div>
                 <div class="games_info">
                     <p class="game_name">마리오 카트 8 디럭스</p>
                     <p class="model">NINTENDO SWITCH</p>
                 </div>
+            </a>
             </li>
-            <li><a href="#"><img src="./img/game2.jpg" alt="슈퍼 마리오 오디세이 이미지"></a>
+            <li><a href="#"><img src="./img/game2.jpg" alt="슈퍼 마리오 오디세이 이미지">
+                <div class="hover_bg"></div>
                 <div class="games_info">
                     <p class="game_name">슈퍼 마리오 오디세이</p>
                     <p class="model">NINTENDO SWITCH</p>
                 </div>
+            </a>
             </li>
-            <li><a href="#"><img src="./img/game3.jpg" alt="슈퍼 마리오 3D월드 이미지"></a>
+            <li><a href="#"><img src="./img/game3.jpg" alt="슈퍼 마리오 3D월드 이미지">
+                <div class="hover_bg"></div>
                 <div class="games_info">
                     <p class="game_name">슈퍼 마리오 3D월드 + 퓨리 월드</p>
                     <p class="model">NINTENDO SWITCH</p>
                 </div>
+            </a>
             </li>
         </ul>
     </section>
