--- a/support/support.html
+++ b/support/support.html
@@ -56,7 +56,7 @@
                         </li>
                         <li><a href="#">캐릭터<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="#">마리오 포털</a></li>
+                                <li><a href="../character/mario/mario.html">마리오 포털</a></li>
                                 <li><a href="#">스플래툰 베이스 홈페이지</a></li>
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
@@ -65,7 +65,7 @@
                             <ul class="snb">
                                 <li><a href="../support/support.html">고객지원 한눈에 보기</a></li>
                                 <li><a href="../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
-                                <li><a href="#">Nintendo Switch Online 서포트</a></li>
+                                <li><a href="https://www.nintendo.co.kr/support/switch/nintendo_switch_online/">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
                                 <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
                                 <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
@@ -105,7 +105,7 @@
                         </li>
                         <li><a href="#">캐릭터</a>
                             <ul class="snb">
-                                <li><a href="#">마리오 포털</a></li>
+                                <li><a href="../character/mario/mario.html">마리오 포털</a></li>
                                 <li><a href="#">스플래툰 베이스 홈페이지</a></li>
                                 <li><a href="#">별의 커비 공식 홈페이지</a></li>
                             </ul>
@@ -113,7 +113,7 @@
                         <li><a href="../support/support.html">고객지원</a>
                             <ul class="snb">
                                 <li><a href="../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
-                                <li><a href="#">Nintendo Switch Online 서포트</a></li>
+                                <li><a href="https://www.nintendo.co.kr/support/switch/nintendo_switch_online/">Nintendo Switch Online 서포트</a></li>
                                 <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
                                 <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
                                 <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
