--- a/software/switch_soft.html
+++ b/software/switch_soft.html
@@ -1,12 +1,418 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nintendo</title>
+
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="icon" href="../favicon//favi.png">
+
+    <script src="https://kit.fontawesome.com/7aa93c4da2.js" crossorigin="anonymous"></script>
+    <script src="../js/header.js" defer></script>
+    <script src="../js/footer.js" defer></script>
 </head>
+
 <body>
-    
+    <header>
+        <div class="header_wrap">
+            <div class="logo"><a href="../index.html"><img src="../img/logo_nintendo_red.gif" alt="로고"></a></div>
+            <nav>
+                <div class="menu">
+                    <div class="menu_icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="gnb_m">
+                        <li><a href="#">Nintentdo Switch<i class="fa-regular fa-circle-down"></i></a>
+                            <ul class="snb">
+                                <li><a href="#">Nintendo Switch OLED 모델</a></li>
+                                <li><a href="#">Nintendo Switch</a></li>
+                                <li><a href="#">Nintendo Switch Lite</a></li>
+                                <li><a href="#">기능ㆍ특징을 비교</a></li>
+                                <li><a href="#">주변기기</a></li>
+                                <li><a href="#">Nintendo Switch Online</a></li>
+                                <li><a href="#">Nintendo 지킴이 Switch™</a></li>
+                                <li><a href="#">닌텐도 e숍</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
+                            <ul class="snb">
+                                <li><a href="#">소프트웨어 한눈에 보기</a></li>
+                                <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
+                                <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
+                                <li><a href="#">발매 예정 소프트웨어</a></li>
+                                <li><a href="#">스마트폰용 앱</a></li>
+
+                            </ul>
+                        </li>
+                        <li><a href="#">캐릭터<i class="fa-regular fa-circle-down"></i></a>
+                            <ul class="snb">
+                                <li><a href="#">마리오 포털</a></li>
+                                <li><a href="#">스플래툰 베이스 홈페이지</a></li>
+                                <li><a href="#">별의 커비 공식 홈페이지</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                            <ul class="snb">
+                                <li><a href="../support/support.html">고객지원 한눈에 보기</a></li>
+                                <li><a href="../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
+                                <li><a href="#">Nintendo Switch Online 서포트</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../news/news.html?tab=0">News<i class="fa-regular fa-circle-down"></i></a>
+                            <ul class="snb">
+                                <li><a href="../news/news.html?tab=0">뉴스 전체보기</a></li>
+                                <li><a href="../news/news.html?tab=1">News</a></li>
+                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="gnb_pc">
+                        <li><a href="#">Nintentdo Switch</a>
+                            <ul class="snb">
+                                <li><a href="#">Nintendo Switch OLED 모델</a></li>
+                                <li><a href="#">Nintendo Switch</a></li>
+                                <li><a href="#">Nintendo Switch Lite</a></li>
+                                <li><a href="#">기능ㆍ특징을 비교</a></li>
+                                <li><a href="#">주변기기</a></li>
+                                <li><a href="#">Nintendo Switch Online</a></li>
+                                <li><a href="#">Nintendo 지킴이 Switch™</a></li>
+                                <li><a href="#">닌텐도 e숍</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">소프트웨어</a>
+                            <ul class="snb">
+                                <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
+                                <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
+                                <li><a href="#">발매 예정 소프트웨어</a></li>
+                                <li><a href="#">스마트폰용 앱</a></li>
+
+                            </ul>
+                        </li>
+                        <li><a href="#">캐릭터</a>
+                            <ul class="snb">
+                                <li><a href="#">마리오 포털</a></li>
+                                <li><a href="#">스플래툰 베이스 홈페이지</a></li>
+                                <li><a href="#">별의 커비 공식 홈페이지</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../support/support.html">고객지원</a>
+                            <ul class="snb">
+                                <li><a href="../support/switch/switch.html">Nintendo Switch 고객지원 </a></li>
+                                <li><a href="#">Nintendo Switch Online 서포트</a></li>
+                                <li><a href="https://www.nintendo.co.kr/3DS/customer/index.php">닌텐도 3DS 고객지원</a></li>
+                                <li><a href="https://support.nintendo.co.kr/index.do">고객지원 홈페이지</a></li>
+                                <li><a href="https://www.nintendo.co.jp/netinfo/ko_KR/index.html">네트워크 장애 발생 상황</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="../news/news.html?tab=0">News</a>
+                            <ul class="snb">
+                                <li><a href="../news/news.html?tab=1">News</a></li>
+                                <li><a href="../news/news.html?tab=2">보도자료</a></li>
+                                <li><a href="../news/news.html?tab=3">알림</a></li>
+                                <li><a href="../news/news.html?tab=4">이벤트</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="search"><i class="fa-solid fa-magnifying-glass"></i></div>
+                <div class="shop"><a href="#"></a></div>
+            </nav>
+        </div>
+    </header>
+
+    <section id="heading">
+        <h1>Nintendo Switch 소프트웨어</h1>
+        <p>전체 소프트웨어 보기 <i class="fa-solid fa-arrow-right"></i></p>
+    </section>
+
+    <section id="best">
+        <div id="slide-box">
+            <ul id="best-slide">
+                <li class="best1">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best1.jpg" alt="젤다의 전설 티어스 오브 킹덤 이미지">
+                        <p></p>
+                    </a>
+                </li>
+                <li class="best2">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best2.jpg" alt="스플래툰3 이미지">
+                        <p></p>
+                    </a>
+                </li>
+                <li class="best3">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best3.jpg" alt="포켓몬스터 스칼렛과 포켓몬스터 바이올렛 이미지">
+                        <p></p>
+                    </a>
+                </li>
+                <li class="best4">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best4.jpg" alt="닌텐도 스포츠 이미지">
+                        <p></p>
+                    </a>
+                </li>
+                <li class="best5">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best5.jpg" alt="베요네타3 이미지">
+                        <p></p>
+                    </a>
+                </li>
+                <li class="best6">
+                    <a href="#">
+                        <span></span>
+                        <img src="./img/best6.jpg" alt="커비의 드림뷔페 이미지">
+                        <p></p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <ul id="bullets">
+            <li class="bullet1"></li>
+            <li class="bullet2"></li>
+            <li class="bullet3"></li>
+            <li class="bullet4"></li>
+            <li class="bullet5"></li>
+            <li class="bullet6"></li>
+        </ul>
+    </section>
+
+    <section id="new">
+        <div class="new_top">
+            <h4><span></span>최신 소프트웨어 </h4><a href="./news/news.html"><i class="fa-solid fa-plus"></i></a>
+        </div>
+        <ul class="new_list">
+            <li class="new_soft new1"><a href="#"><img src="./img/new1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>젤다의 전설 티어스 오브 더 킹덤</p>
+                    <p class="date">2023.05.12</p>
+                </div>
+            </li>
+            <li class="new_soft new1"><a href="#"><img src="./img/new2.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>포스트 보이드 (POST VOID)</p>
+                    <p class="date">2023.05.04</p>
+                </div>
+            </li>
+            <li class="new_soft new1"><a href="#"><img src="./img/new3.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>Behind The Screen</p>
+                    <p class="date">2023.04.27</p>
+                </div>
+            </li>
+            <li class="new_soft new1"><a href="#"><img src="./img/new4.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>오메가 스트라이커스</p>
+                    <p class="date">2023.04.27</p>
+                </div>
+            </li>
+            <li class="new_soft new1"><a href="#"><img src="./img/new5.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>SD 신 가면라이더 난무</p>
+                    <p class="date">2023.04.27</p>
+                </div>
+            </li>
+            <li class="new_soft new1"><a href="#"><img src="./img/new6.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>DL</span><span class="korean">한국어</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>가제트 2 (Contraptions 2)</p>
+                    <p class="date">2023.04.27</p>
+                </div>
+            </li>
+        </ul>
+        <button id="plus">더보기 +</button>
+    </section>
+
+    <section id="sale">
+        <div class="sale_top">
+            <h4><span></span>할인중인 다운로드 소프트웨어 </h4><a href="./news/news.html"><i class="fa-solid fa-plus"></i></a>
+        </div>
+        <ul class="sale_list">
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="korean">한국어</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>OXENFREE II: Lost Signals</p>
+                    <p class="date">2023.07.13</p>
+                </div>
+            </li>
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="korean">한국어</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>피트니스 러너</p>
+                    <p class="date">2023.05.26</p>
+                </div>
+            </li>
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="korean">한국어</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>이스 메모와르 -펠가나의 맹세-</p>
+                    <p class="date">2023.05.25</p>
+                </div>
+            </li>
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>Swordbreaker: Origins</p>
+                    <p class="date">2023.05.11</p>
+                </div>
+            </li>
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>Weeping Willow</p>
+                    <p class="date">2023.05.11</p>
+                </div>
+            </li>
+            <li class="sale_soft sale1"><a href="#"><img src="./img/software1.jpg" alt=""></a>
+                <div class="soft_info">
+                    <p><span>PK</span><span>DL</span><span>체험판</span><span class="pre">예약</span></p>
+                    <h4>Nintendo Switch</h4>
+                    <p>Pixel Driver</p>
+                    <p class="date">2023.05.11</p>
+                </div>
+            </li>
+        </ul>
+        <button id="plus">더보기 +</button>
+    </section>
+
+    <section id="plus_menu">
+        <ul class="plus_list">
+            <li class="plus plus1">
+                <a href="#">
+                    <div class="plus_img"></div>
+                    <div class="plus_text">
+                        <p>Nintendo e-shop 바로가기 <i class="fa-solid fa-angle-right"></i></p>
+                    </div>
+                </a>
+            </li>
+            <li class="plus plus2">
+                <a href="#">
+                    <div class="plus_img"></div>
+                    <div class="plus_text">
+                        <p>Nintendo Switch Online <i class="fa-solid fa-angle-right"></i></p>
+                    </div>
+                </a>
+            </li>
+            <li class="plus plus3">
+                <a href="#">
+                    <div class="plus_img"></div>
+                    <div class="plus_text">
+                        <p>발매 예정 소프트웨어 <i class="fa-solid fa-angle-right"></i></p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </section>
+
+
+    <div id="go_top">
+        <a href="#"><span>TOP</span>&nbsp;&nbsp;<i class="fa-solid fa-angle-up"></i></a>
+    </div>
+    <footer>
+        <div class="community">
+            <ul class="sns_list">
+                <li class="sns sns1"><a href="#"></a></li>
+                <li class="sns sns2"><a href="#"></a></li>
+                <li class="sns sns3"><a href="#"></a></li>
+                <li class="sns sns4"><a href="#"></a></li>
+                <li class="sns sns5"><a href="#"></a></li>
+            </ul>
+            <div class="my_nintendo"><a href="">
+                    <div class="my_nintendo_bg"></div>
+                </a></div>
+            <div class="amiibo"><a href=""></a></div>
+        </div>
+        <div class="footer_menu">
+            <ul class="footer_nav">
+                <li><a href="#">한국닌텐도<i class="fa-regular fa-circle-down"></i></a>
+                    <ul class="footer_snb">
+                        <li><a href="#">- 회사개요</a></li>
+                        <li><a href="#">- 찾아오시는 길</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">본체 / amiibo<i class="fa-regular fa-circle-down"></i></a>
+                    <ul class="footer_snb">
+                        <li><a href="#">- Nintendo Switch</a></li>
+                        <li><a href="#">- New 닌텐도 3DS XL</a></li>
+                        <li><a href="#">- New 닌텐도 2DS XL</a></li>
+                        <li><a href="#">- amiibo</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
+                    <ul class="footer_snb">
+                        <li><a href="#">- Nintendo Switch 소프트웨어</a></li>
+                        <li><a href="#">- 닌텐도 3DS 소프트웨어</a></li>
+                        <li><a href="#">- 발매 예정 소프트웨어</a></li>
+                        <li><a href="#">- 스마트폰용 앱</a></li>
+                    </ul>
+                </li>
+                <li><a href="../support/support.html">고객지원<i class="fa-regular fa-circle-down"></i></a>
+                    <ul class="footer_snb">
+                        <li><a href="../support/switch/switch.html">- Nintendo Switch</a></li>
+                        <li><a href="#">- 닌텐도 3DS</a></li>
+                        <li><a href="#">- 고객지원 홈페이지</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="footer">
+            <ul class="footer_list">
+                <li class="footer_text footer1">
+                    <p>이용약관 | <span>개인정보처리방침</span></p>
+                </li>
+                <li class="footer_text footer2">
+                    <p>고객지원 문의전화 : 1670-9900</p>
+                    <p>(평일 오전 9시 30분~오후 5시 30분)</p>
+                </li>
+                <li class="footer_text footer3">
+                    <p>※ 토/일/공휴일/회사 정기휴일 및 특별휴일 제외</p>
+                </li>
+                <li class="footer_text footer4">
+                    <p>ⓒ 2006 Nintendo of Korea Co., Ltd. All Rights Reserved.</p>
+                    <p>상호명 : 한국닌텐도주식회사 대표자명 : 미우라 타카히로 사업자등록번호 : 120-87-03578</p>
+                </li>
+                <li class="footer_text footer5">
+                    <p>본 사이트는 포트폴리오 용도의 사이트로</p>
+                    <p>상업적 목적이 아닙니다.</p>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
