--- a/nintendo switch/switch_oled.html
+++ b/nintendo switch/switch_oled.html
@@ -150,24 +150,29 @@
                     <p>2021.<span>10.8</span>[금] 발매</p>
                     <p>희망소비자가격 : <span>415,000원</span></p>
                 </div>
-                <p><span>INTERVIEW</span>개발자에게 물어보았습니다. <i class="fa-solid fa-circle-chevron-right"></i></p>
+                <p><a href="#"><span>INTERVIEW</span>개발자에게 물어보았습니다. <i class="fa-solid fa-circle-chevron-right"></i></a>
+                </p>
             </div>
         </div>
     </section>
 
 
     <section id="new">
-        <div class="wrap">
-            <p>Nintendo Switch 패밀리에 「Nintendo Switch&trade;(OLED 모델)」이 새롭게 추가되었습니다.</p>
-            <p>언제, 어디서든, 누구와도, OLED 모델이기에 가능한 선명한 색감의 화면으로 게임을 즐길 수 있습니다.</p>
-        </div>
         <div id="new_bg">
-            <div id="new_bg_text">
-                <p>Nintendo Switch(OLED 모델)</p>
-                <p>첫 공개 영상</p>
-                <p><i class="bi bi-play-circle-fill"></i></p>
+            <div class="wrap">
+                <p>Nintendo Switch 패밀리에 <p></p>「Nintendo Switch&trade;(OLED 모델)」이 새롭게 추가되었습니다.</p>
+                <p>언제, 어디서든, 누구와도,<p></p>OLED 모델이기에 가능한 선명한 색감의 화면으로 게임을 즐길 수 있습니다.</p>
             </div>
-            <figure class="vid">
+            <div id="new_bg_text">
+                <a href="https://youtu.be/0qjGn_AunuA" target="_blank">
+                    <div>
+                        <p>Nintendo Switch(OLED 모델)</p>
+                        <p>첫 공개 영상</p>
+                    </div>
+                    <p><i class="bi bi-play-circle-fill"></i></p>
+                </a>
+            </div>
+            <figure id="vid">
                 <video autoplay loop muted>
                     <source src="./img/new_bg_movie.mp4" type="video/mp4">
                 </video>
@@ -180,38 +185,37 @@
             <h4><span>VIVID COLORS</span>선명한 색감</h4>
             <p>
                 <img src="./img/pic_vivid.png" alt="닌텐도 스위치 OLED의 모습">
-                <figure>
-                    <video loop autoplay muted>
-                        <source src="./img/pic_vivid_video.mp4" type="video/mp4">
-                    </video>
-                </figure>
             </p>
+            <figure>
+                <video loop autoplay muted>
+                    <source src="./img/pic_vivid_video.mp4" type="video/mp4">
+                </video>
+            </figure>
         </div>
 
         <div id="big_screen" class="wrap">
-            <h4><span>BIG SCREEN</span>화면의 베젤이 슬림해지면서 넓어진<p></p>7인치 OLED 디스플레이</h4>
-            <p>
+            <h4><span>BIG SCREEN</span><span id="slim">화면의 베젤이 슬림해지면서 넓어진</span><p></p>7인치 OLED 디스플레이</h4>
+            <div id="screen">
                 <figure>
                     <video loop autoplay muted>
                         <source src="./img/pic_bigscreen_video.mp4" type="video/mp4">
                     </video>
                 </figure>
                 <img src="./img/pic_bigscreen.png" alt="닌텐도 스위치 OLED의 모습">
-            </p>
+            </div>
             <p>화면의 베젤이 슬림해지면서 7인치로 넓어진 OLED 디스플레이.</p>
-            <p>바람에 나부끼는 풀숲, 몰려오는 적, 최고 속도로 달려나가는 카트 등,<p></p>다양한 게임 속 세계를 선명한 색감으로 그려냅니다.</p>
+            <p>바람에 나부끼는 풀숲, 몰려오는 적, 최고 속도로 달려나가는 카트 등,</p>
+            <p>다양한 게임 속 세계를 선명한 색감으로 그려냅니다.</p>
 
             <div id="compare">
-                <p><img src="./img/bigscreen_compare1.png" alt="닌텐도 스위치 OLED 모델의 화면 모습"><span>Nintendo Switch(OLED
-                        모델)</span></p>
+                <p><img src="./img/bigscreen_compare1.png" alt="닌텐도 스위치 OLED 모델의 화면 모습"><span>Nintendo Switch (OLED모델)</span></p>
                 <p><img src="./img/bigscreen_compare2.png" alt="닌텐도 스위치 일반 모델의 화면 모습"><span>Nintendo Switch</span></p>
-                <button><i class="bi bi-question-circle-fill"></i>「OLED 디스플레이」란</button>
-                <p>픽셀 하나하나의 유기 EL 소자가 스스로 발광하면서 화면을 표시하는 디스플레이로,<p></p>픽셀의 발광을 끄는 것으로 깊은 검은색을 표현할 수 있는 것이 특징입니다.</p>
+                <button><i class="bi bi-question-circle-fill"></i>&nbsp;&nbsp;「OLED 디스플레이」란</button>
+                <div>픽셀 하나하나의 유기 EL 소자가 스스로 발광하면서 화면을 표시하는 디스플레이로,<p></p>픽셀의 발광을 끄는 것으로 깊은 검은색을 표현할 수 있는 것이 특징입니다.</div>
             </div>
         </div>
 
-        <p class="sect-end"><img src="./img/pic_overview_display.jpg"
-                alt="닌텐도 스위치 OLED 모델로 젤다의 전설 브레스 오브 더 와일드를 플레이하는 모습"></p>
+        <p class="sect-end"><img src="./img/pic_overview_display.jpg" alt="닌텐도 스위치 OLED 모델로 젤다의 전설 브레스 오브 더 와일드를 플레이하는 모습"></p>
     </section>
 
     <section id="stand">
@@ -499,18 +503,22 @@
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-question"></i></p>
-                        <p>「Nintendo Switch (OLED 모델)」에서 모든 Nintendo Switch 소프트웨어를 즐길 수 있나요? <i class="bi bi-plus-circle"></i></p>
+                        <p>「Nintendo Switch (OLED 모델)」에서 모든 Nintendo Switch 소프트웨어를 즐길 수 있나요? <i
+                                class="bi bi-plus-circle"></i></p>
                     </div>
                     <div class="answer">
                         <p><i class="bi bi-arrow-return-right"></i></p>
-                        <p>모든 Nintendo Switch 소프트웨어에 대응하고 있습니다. 단, 「Nintendo Switch (OLED 모델)」과 「Nintendo Switch」의 본체 사이즈나 화면 사이즈가 다르기 때문에, 
-                            일부 <a href="#">「Nintendo Labo 시리즈」</a>에 대해서는 게임 체험에 차이가 생길 수 있습니다. 닌텐도 이외의 소프트웨어에서도 본체 사이즈나 화면 사이즈가 다른 것이 원인으로 게임 체험에 차이가 발생하는 경우가 있습니다.</p>
+                        <p>모든 Nintendo Switch 소프트웨어에 대응하고 있습니다. 단, 「Nintendo Switch (OLED 모델)」과 「Nintendo Switch」의 본체
+                            사이즈나 화면 사이즈가 다르기 때문에,
+                            일부 <a href="#">「Nintendo Labo 시리즈」</a>에 대해서는 게임 체험에 차이가 생길 수 있습니다. 닌텐도 이외의 소프트웨어에서도 본체 사이즈나
+                            화면 사이즈가 다른 것이 원인으로 게임 체험에 차이가 발생하는 경우가 있습니다.</p>
                     </div>
                 </li>
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-circle-chevron-right"></i></p>
-                        <p>「Nintendo Switch (OLED 모델)」의 독은 「Nintendo Switch」에서도 사용할 수 있나요?<i class="bi bi-plus-circle"></i></p>
+                        <p>「Nintendo Switch (OLED 모델)」의 독은 「Nintendo Switch」에서도 사용할 수 있나요?<i
+                                class="bi bi-plus-circle"></i></p>
                     </div>
                     <div class="answer">
                         <p><i class="bi bi-arrow-return-right"></i></p>
@@ -521,18 +529,21 @@
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-question"></i></p>
-                        <p>「Nintendo Switch」의 독은 「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i class="bi bi-plus-circle"></i></p>
+                        <p>「Nintendo Switch」의 독은 「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i
+                                class="bi bi-plus-circle"></i></p>
                     </div>
                     <div class="answer">
                         <p><i class="bi bi-arrow-return-right"></i></p>
                         <p>사용하실 수 있습니다.
-                            <span>※본체 업데이트가 필요한 경우가 있습니다.</span></p></p>
+                            <span>※본체 업데이트가 필요한 경우가 있습니다.</span></p>
+                        </p>
                     </div>
                 </li>
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-question"></i></p>
-                        <p>현재 사용하고 있는 Joy-Con을「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i class="bi bi-plus-circle"></i></p>
+                        <p>현재 사용하고 있는 Joy-Con을「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i class="bi bi-plus-circle"></i>
+                        </p>
 
                     </div>
                     <div class="answer">
@@ -543,7 +554,9 @@
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-question"></i></p>
-                        <p>2대째의 「Nintendo Switch」 구매을 검토하고 있습니다만, 다운로드 구매한 소프트웨어나 저장 데이터는 「Nintendo Switch (OLED 모델)」, 「Nintendo Switch」 , 「Nintendo Switch Lite」 간에 공유가 가능한가요?<i class="bi bi-plus-circle"></i></p>
+                        <p>2대째의 「Nintendo Switch」 구매을 검토하고 있습니다만, 다운로드 구매한 소프트웨어나 저장 데이터는 「Nintendo Switch (OLED 모델)」,
+                            「Nintendo Switch」 , 「Nintendo Switch Lite」 간에 공유가 가능한가요?<i class="bi bi-plus-circle"></i>
+                        </p>
                     </div>
                     <div class="answer">
                         <p><i class="bi bi-arrow-return-right"></i></p>
@@ -553,7 +566,8 @@
                 <li>
                     <div class="ques">
                         <p><i class="fa-solid fa-question"></i></p>
-                        <p>지금까지 「Nintendo Switch」에서 사용했던 주변기기는 그대로 「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i class="bi bi-plus-circle"></i></p>
+                        <p>지금까지 「Nintendo Switch」에서 사용했던 주변기기는 그대로 「Nintendo Switch (OLED 모델)」에서도 사용할 수 있나요?<i
+                                class="bi bi-plus-circle"></i></p>
                     </div>
                     <div class="answer">
                         <p><i class="bi bi-arrow-return-right"></i></p>
